--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -5,3 +5,85 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
     {{e.lastName }}, {{e.firstName}}
   </li>
 </ul>
+<input matInput placeholder="Enter text here" [(ngModel)]="searchText"/>
+
+<button mat-stroked-button>
+  <mat-icon>create</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>edit</mat-icon>
+</button>
+
+<button mat-stroked-button color="warn">
+  <mat-icon>delete</mat-icon>
+</button>
+
+<button mat-stroked-button color="warn">
+  <mat-icon>delete_outline</mat-icon>
+</button>
+
+<button mat-stroked-button color="warn">
+  <mat-icon>delete_forever</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>visibility</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>view_quilt</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>format_align_left</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>chrome_reader_mode</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>first_page</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>chevron_left</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>chevron_right</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>last_page</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+  <mat-icon>power_settings_new</mat-icon>
+</button>
+
+<button mat-stroked-button color="primary">
+
+</button>
+
+<button mat-stroked-button color="primary">
+
+</button>
+
+
+<table mat-table [dataSource]="dataSource">
+
+  <!-- Define columns -->
+  <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+    <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+  </ng-container>
+
+  <!-- Add more columns as needed -->
+
+  <!-- Define a row -->
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
