--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -16,31 +16,11 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
 </button>
 
 <button mat-stroked-button color="warn">
-  <mat-icon>delete</mat-icon>
-</button>
-
-<button mat-stroked-button color="warn">
-  <mat-icon>delete_outline</mat-icon>
-</button>
-
-<button mat-stroked-button color="warn">
   <mat-icon>delete_forever</mat-icon>
 </button>
 
 <button mat-stroked-button color="primary">
   <mat-icon>visibility</mat-icon>
-</button>
-
-<button mat-stroked-button color="primary">
-  <mat-icon>view_quilt</mat-icon>
-</button>
-
-<button mat-stroked-button color="primary">
-  <mat-icon>format_align_left</mat-icon>
-</button>
-
-<button mat-stroked-button color="primary">
-  <mat-icon>chrome_reader_mode</mat-icon>
 </button>
 
 <button mat-stroked-button color="primary">
@@ -63,13 +43,6 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
   <mat-icon>power_settings_new</mat-icon>
 </button>
 
-<button mat-stroked-button color="primary">
-
-</button>
-
-<button mat-stroked-button color="primary">
-
-</button>
 
 
 <table mat-table [dataSource]="dataSource">
@@ -83,6 +56,9 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
         {{ element[column] }}
       </ng-container>
       <ng-template #actionsColumn>
+        <button mat-stroked-button color="basic" (click)="viewItem(element)">
+          <mat-icon>visibility</mat-icon>
+        </button>
         <button mat-stroked-button color="primary" (click)="editItem(element)">
           <mat-icon>edit</mat-icon>
         </button>
