--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -2,6 +2,7 @@
 Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, sollten hier die Namen der in der Datenbank gespeicherten Mitarbeiter angezeigt werden!
 <ul>
   <li *ngFor="let e of employees$ | async">
-    {{e.lastName }}, {{e.firstName}}
+    {{ e.lastName }}, {{ e.firstName }}, {{ e.id }}
+    <button routerLink="/details/{{e.id}}">edit</button>
   </li>
 </ul>
