--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,49 +1,32 @@
-<h1>LF10-Starter</h1>
-Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, sollten hier die Namen der in der Datenbank gespeicherten Mitarbeiter angezeigt werden!
 <ul>
   <li *ngFor="let e of employees$ | async">
     {{e.lastName }}, {{e.firstName}}
   </li>
 </ul>
-<input matInput placeholder="Enter text here" [(ngModel)]="searchText"/>
 
-<button mat-stroked-button>
-  <mat-icon>create</mat-icon>
-</button>
+<h2>Manage employee's</h2>
 
-<button mat-stroked-button color="primary">
-  <mat-icon>edit</mat-icon>
-</button>
+<mat-form-field class="example-form-field">
+  <mat-label>Search an employee</mat-label>
+  <input matInput placeholder="Enter text here" [(ngModel)]="searchText" />
+  <button matSuffix mat-icon-button aria-label="Clear" (click)="searchText=''">
+    <mat-icon>close</mat-icon>
+  </button>
+</mat-form-field>
 
-<button mat-stroked-button color="warn">
-  <mat-icon>delete_forever</mat-icon>
-</button>
+<div class="relative-container">
+  <button mat-stroked-button color="primary" class="logout-button">
+    <mat-icon>power_settings_new</mat-icon>
+  </button>
+</div>
 
-<button mat-stroked-button color="primary">
-  <mat-icon>visibility</mat-icon>
-</button>
+<br>
 
-<button mat-stroked-button color="primary">
-  <mat-icon>first_page</mat-icon>
-</button>
-
-<button mat-stroked-button color="primary">
-  <mat-icon>chevron_left</mat-icon>
-</button>
-
-<button mat-stroked-button color="primary">
-  <mat-icon>chevron_right</mat-icon>
-</button>
-
-<button mat-stroked-button color="primary">
-  <mat-icon>last_page</mat-icon>
-</button>
-
-<button mat-stroked-button color="primary">
-  <mat-icon>power_settings_new</mat-icon>
-</button>
-
-
+<!--<div class="relative-create-button-container">-->
+<!--  <button mat-button style="color: limegreen" (click)="createItem()" class="create-button">-->
+<!--    Create new employee-->
+<!--  </button>-->
+<!--</div>-->
 
 <table mat-table [dataSource]="dataSource">
 
@@ -66,6 +49,7 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
           <mat-icon>delete_outline</mat-icon>
         </button>
       </ng-template>
+
     </td>
   </ng-container>
 
@@ -74,3 +58,21 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 </table>
+
+<div class="relative-paging-container">
+  <button mat-stroked-button color="primary" class="paging-buttons">
+    <mat-icon>first_page</mat-icon>
+  </button>
+
+  <button mat-stroked-button color="primary" class="paging-buttons">
+    <mat-icon>chevron_left</mat-icon>
+  </button>
+
+  <button mat-stroked-button color="primary" class="paging-buttons">
+    <mat-icon>chevron_right</mat-icon>
+  </button>
+
+  <button mat-stroked-button color="primary" class="paging-buttons">
+    <mat-icon>last_page</mat-icon>
+  </button>
+</div>
