--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,6 +1,5 @@
 <h1>LF10-Starter</h1>
-Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, sollten hier die Namen der in der Datenbank gespeicherten Mitarbeiter angezeigt werden!
-<ul>
+<button routerLink="/details">neuen MA hinzufügen</button><ul>
   <li *ngFor="let e of employees$ | async">
     {{ e.lastName }}, {{ e.firstName }}, {{ e.id }}
     <button routerLink="/details/{{e.id}}">edit</button>
