--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+
+
+<div class="app-body">
+  <mat-toolbar color="primary">
+    <span>Employees management module</span>
+    <span class="example-spacer"></span>
+    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user</mat-icon>
+  </mat-toolbar>
+
+  <div class="app-content">
+    <div class="app-route mat-elevation-z6">
+      <router-outlet></router-outlet>
+    </div>
+
+  </div>
+</div>
