--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -16,6 +16,8 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
     </button>
 </mat-form-field>
 
+<button mat-flat-button color="primary" (click)="navToCreate()">Create</button>
+
 <hr>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -31,24 +33,24 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
   <!-- Name Column -->
   <ng-container matColumnDef="firstname">
     <th mat-header-cell *matHeaderCellDef> Firstname </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <td mat-cell *matCellDef="let e of employees$ | async"> {{e.firstname}} </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="lastname">
     <th mat-header-cell *matHeaderCellDef> Lastname </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="age">
     <th mat-header-cell *matHeaderCellDef> Age </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.age}} </td>
   </ng-container>
 
   <ng-container matColumnDef="street">
     <th mat-header-cell *matHeaderCellDef> Street </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.street}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
