front page - details part 1
all in one component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
-  background-color: #F5F5F5;
+  background-color: #F5F6FA;
 }
 
 .app-content {
