--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="app-body">
-  <mat-toolbar color="primary">
+  <mat-toolbar class="mat-elevation-z3" color="primary">
     <span>Employees management module</span>
     <span class="example-spacer"></span>
     <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user</mat-icon>
