buttons from list and fields on diff pages and services(myRouter) and new components
detail, edit and create button navigate to proper pages and their fields show editable or read only values. ServiceRouter added for all routing

--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -1,4 +1,14 @@
-<p>employee-details works!</p>
 
-{{employee| json}}
+
+<!--{{employee| json}} -->
+<h1>Details</h1>
+<section class="person-cards">
+
+  <app-employee-form [mode]="detailsFormMode" [data]="employeeDetails"></app-employee-form>
+
+</section>
+
+
+
+<button class="ok-button" mat-flat-button color="primary" (click)="navToMainMenu()" >OK</button>
 
