--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -56,12 +56,14 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> Action </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button matTooltip="Basic" aria-label="view details of employee" (click)="navToDetails(element.position)">
+      <button mat-icon-button (click)="navToDetails(element.position)">
         <mat-icon>library_books</mat-icon>
       </button>
-      <button mat-icon-button matTooltip="Basic" aria-label="delete employee">
+      <button mat-icon-button (click)="navToEdit(element.position)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button>
         <mat-icon>delete_forever</mat-icon>
-
       </button>
     </td>
   </ng-container>
