--- a/src/app/employee-edit/employee-edit.component.html
+++ b/src/app/employee-edit/employee-edit.component.html
@@ -4,11 +4,12 @@
 <h1>Update employee</h1>
 <section class="person-cards">
 
-  <app-employee-form [mode]="editFormMode" [data]="employeeDetails"></app-employee-form>
+  <app-employee-form [mode]="editFormMode" [data]="employeeDetails" (onChange)="onEmployeeChange($event)"></app-employee-form>
 
 </section>
 
 
 
 <button mat-flat-button color="primary" (click)="navToMainMenu()">Cancel</button>
+<button mat-flat-button color="primary" (click)="updateEmployee()">Update</button>
 
