--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -64,13 +64,13 @@ Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, s
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> Action </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button (click)="navToDetails(element.position)">
+      <button mat-icon-button (click)="navToDetails(element.id)">
         <mat-icon>library_books</mat-icon>
       </button>
-      <button mat-icon-button (click)="navToEdit(element.position)">
+      <button mat-icon-button (click)="navToEdit(element.id)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-icon-button>
+      <button mat-icon-button (click)="deleteEmployee(element.id)">
         <mat-icon>delete_forever</mat-icon>
       </button>
     </td>
