added notfication for deleting and styled delete dialog

--- a/src/app/popup/confirm-popup/confirm-popup.component.html
+++ b/src/app/popup/confirm-popup/confirm-popup.component.html
@@ -1,5 +1,5 @@
-<h1>Are you sure?</h1>
-<button mat-flat-button color="primary" (click)="yes()">Yes</button>
-<button mat-flat-button color="primary" (click)="no()">No</button>
-
-
+<div class="mat-dialog-container">
+  <h2>Are you sure?</h2>
+  <button mat-flat-button color="primary" (click)="yes()">Yes</button>
+  <button mat-flat-button color="primary" (click)="no()">No</button>
+</div>
