deleted unused files and styled create button in list

--- a/src/app/employee-list/employee-list.component.css
+++ b/src/app/employee-list/employee-list.component.css
@@ -1,7 +1,5 @@
-.example-form-field {
-    width: 225px;
-}
-
-table {
-    width: 100%;
+.topBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
