--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,5 @@
 .example-spacer {
   flex: 1 1 auto;
-
 }
 
 .app-body {
@@ -22,4 +21,10 @@
   width: 100%;
   height: 100%;
   padding: 30px 60px;
+}
+
+.app-content {
+  flex: 1 1 auto;
+  padding: 5% 10%;
+  background-color: rgba(71, 88, 184, 0.34);
 }
