--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -2,9 +2,9 @@
 <div class="topBar">
   <div class="searchBar">
     <mat-form-field class="example-form-field">
-      <mat-label>Search an employee</mat-label>
-      <input matInput placeholder="Enter text here" [(ngModel)]="searchText"/>
-      <button matSuffix mat-icon-button aria-label="Clear" (click)="searchText=''">
+      <mat-label>Search</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search for an employee">
+      <button matSuffix mat-icon-button aria-label="Clear">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
@@ -13,66 +13,63 @@
     <button class="createButton" mat-flat-button color="primary" (click)="navToCreate()">Create</button>
   </div>
 </div>
-<hr>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
 
-  <ng-container matColumnDef="firstname">
-    <th mat-header-cell *matHeaderCellDef> Firstname </th>
-    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
-  </ng-container>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> No.</th>
+      <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="lastname">
-    <th mat-header-cell *matHeaderCellDef> Lastname </th>
-    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-  </ng-container>
+    <ng-container matColumnDef="firstname">
+      <th mat-header-cell *matHeaderCellDef> Firstname</th>
+      <td mat-cell *matCellDef="let element"> {{ element.firstName }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="street">
-    <th mat-header-cell *matHeaderCellDef> Street </th>
-    <td mat-cell *matCellDef="let element"> {{element.street}} </td>
-  </ng-container>
+    <ng-container matColumnDef="lastname">
+      <th mat-header-cell *matHeaderCellDef> Lastname</th>
+      <td mat-cell *matCellDef="let element"> {{ element.lastName }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="postcode">
-    <th mat-header-cell *matHeaderCellDef> Postcode </th>
-    <td mat-cell *matCellDef="let element"> {{element.postcode}} </td>
-  </ng-container>
+    <ng-container matColumnDef="street">
+      <th mat-header-cell *matHeaderCellDef> Street</th>
+      <td mat-cell *matCellDef="let element"> {{ element.street }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="city">
-    <th mat-header-cell *matHeaderCellDef> City </th>
-    <td mat-cell *matCellDef="let element"> {{element.city}} </td>
-  </ng-container>
+    <ng-container matColumnDef="postcode">
+      <th mat-header-cell *matHeaderCellDef> Postcode</th>
+      <td mat-cell *matCellDef="let element"> {{ element.postcode }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="phone">
-    <th mat-header-cell *matHeaderCellDef> Phone </th>
-    <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
-  </ng-container>
+    <ng-container matColumnDef="city">
+      <th mat-header-cell *matHeaderCellDef> City</th>
+      <td mat-cell *matCellDef="let element"> {{ element.city }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef> Action </th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-icon-button (click)="navToDetails(element.id)">
-        <mat-icon>library_books</mat-icon>
-      </button>
-      <button mat-icon-button (click)="navToEdit(element.id)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button (click)="deleteEmployee(element.id)">
-        <mat-icon>delete_forever</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef> Phone</th>
+      <td mat-cell *matCellDef="let element"> {{ element.phone }}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="navToDetails(element.id)">
+          <mat-icon>library_books</mat-icon>
+        </button>
+        <button mat-icon-button (click)="navToEdit(element.id)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button (click)="deleteEmployee(element.id)">
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-<app-paginator
-  [totalItems]="totalItems"
-  [pageSize]="pageSize"
-  (pageChanged)="onPageChanged($event)">
-</app-paginator>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+</div>
