--- a/src/app/employee-add/employee-add.component.html
+++ b/src/app/employee-add/employee-add.component.html
@@ -1,16 +1,40 @@
+<form [formGroup]="employeeForm">
+  <mat-form-field appearance="fill">
+    <mat-label>ID</mat-label>
+    <input matInput formControlName="id">
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Last Name</mat-label>
+    <input matInput formControlName="lastName">
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>First Name</mat-label>
+    <input matInput formControlName="firstName">
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Street</mat-label>
+    <input matInput formControlName="street">
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Postcode</mat-label>
+    <input matInput formControlName="postcode">
+    <mat-error *ngIf="employeeForm.get('postcode')?.hasError('pattern')">
+      Please enter a valid 5-digit postcode.
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>City</mat-label>
+    <input matInput formControlName="city">
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Phone</mat-label>
+    <input matInput formControlName="phone">
+    <mat-error *ngIf="employeeForm.get('phone')?.hasError('pattern')">
+      Please enter a valid phone number.
+    </mat-error>
+  </mat-form-field>
 
-
-<!--{{employee| json}} -->
-<h1>Create a new employee</h1>
-<section class="person-cards">
-
-  <app-employee-form [mode]="addFormMode" (onChange)="onEmployeeChange($event)"></app-employee-form>
-
-
-</section>
-
-
-
-<button mat-flat-button color="primary" (click)="navToMainMenu()">Cancel</button>
-
-<button mat-flat-button color="primary" (click)="saveEmployee()">Save</button>
+  <button mat-flat-button color="primary" (click)="navToMainMenu()">Cancel</button>
+  <button mat-flat-button color="primary" type="submit" [disabled]="!employeeForm.valid" (click)="onSubmit()">Save
+  </button>
+</form>
