--- a/src/app/employee-add/employee-add.component.html
+++ b/src/app/employee-add/employee-add.component.html
@@ -1,3 +1,5 @@
+<h2>Create new employee</h2>
+
 <form [formGroup]="employeeForm">
   <mat-form-field appearance="fill">
     <mat-label>ID</mat-label>
