--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,3 +1,4 @@
+<div class="app-route">
 <p>Employee List</p>
 <div class="topBar">
   <div class="searchBar">
@@ -72,4 +73,5 @@
 
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+</div>
 </div>
