--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%;  }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+  background-color: rgba(71, 88, 184, 0.34);
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 * {
   box-sizing: border-box;
+}
+
+.form_container {
+  display: flex;
+  flex-direction: row;
+  column-gap: 100px;
+  width: 0%;
+}
+
+.container_1, .container_2, .container_3 {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.app-route {
+  background-color: #ffffff;
+  width: 100%;
+  height: 100%;
+  padding: 30px 60px;
+}
+
+.form_layout {
+  background-color: #ffffff;
+  width: 960px;
+  height: 400px;
+  padding: 60px 90px 60px 60px;
+  margin-left: 20%;
+}
+
+.button_space{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 30px
 }
