--- a/src/app/employee-list/employee-list.component.css
+++ b/src/app/employee-list/employee-list.component.css
@@ -3,3 +3,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.logoutButton{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-left:auto;
+
+}
