Employee List title is now an H2
and at the same height as the logout button

--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,6 +1,8 @@
 <div class="app-route">
-  <button class="logoutButton" mat-flat-button style="background-color:#778899; color:#fff;">Logout</button>
-<p>Employee List</p>
+  <div class="header-elements">
+    <button class="logoutButton" mat-flat-button style="background-color:#778899; color:#fff;">Logout</button>
+    <h2>Employee List</h2>
+  </div>
 <div class="topBar">
   <div class="searchBar">
     <mat-form-field class="example-form-field">
