--- a/src/app/employee-list/employee-list.component.css
+++ b/src/app/employee-list/employee-list.component.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 30px;
 }
 
 .logoutButton{
@@ -9,5 +10,11 @@
   justify-content:space-between;
   align-items:center;
   margin-left:auto;
+}
 
+.header-elements {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row-reverse;
 }
