--- a/src/app/employee-edit/employee-edit.component.html
+++ b/src/app/employee-edit/employee-edit.component.html
@@ -1,50 +1,55 @@
-<h2>Update employee</h2>
+<div class="mat-elevation-z4 form_layout">
+  <h2>Update employee</h2>
+  <form [formGroup]="employeeForm">
+    <div class=" form_container">
+      <div class="container_1">
+        <mat-form-field appearance="fill">
+          <mat-label>ID</mat-label>
+          <input matInput formControlName="id">
+        </mat-form-field>
 
-<form [formGroup]="employeeForm">
-  <mat-form-field appearance="fill">
-    <mat-label>ID</mat-label>
-    <input matInput formControlName="id">
-  </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Last Name</mat-label>
+          <input matInput formControlName="lastName">
+        </mat-form-field>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Last Name</mat-label>
-    <input matInput formControlName="lastName">
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>First Name</mat-label>
-    <input matInput formControlName="firstName">
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Street</mat-label>
-    <input matInput formControlName="street">
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Postcode</mat-label>
-    <input matInput formControlName="postcode">
-    <mat-error *ngIf="employeeForm.get('postcode')?.hasError('pattern')">
-      Please enter a valid 5-digit postcode.
-    </mat-error>
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>City</mat-label>
-    <input matInput formControlName="city">
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Phone</mat-label>
-    <input matInput formControlName="phone">
-    <mat-error *ngIf="employeeForm.get('phone')?.hasError('pattern')">
-      Please enter a valid phone number.
-    </mat-error>
-  </mat-form-field>
-</form>
-
-<button mat-flat-button color="primary" (click)="navToMainMenu()">Cancel</button>
-<button mat-flat-button color="primary" type="submit" [disabled]="!employeeForm.valid" (click)="updateEmployee()">
-  Confirm
-</button>
-
+        <mat-form-field appearance="fill">
+          <mat-label>First Name</mat-label>
+          <input matInput formControlName="firstName">
+        </mat-form-field>
+      </div>
+      <div class="container_2">
+        <mat-form-field appearance="fill">
+          <mat-label>Street</mat-label>
+          <input matInput formControlName="street">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Postcode</mat-label>
+          <input matInput formControlName="postcode">
+          <mat-error *ngIf="employeeForm.get('postcode')?.hasError('pattern')">
+            Please enter a valid 5-digit postcode.
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>City</mat-label>
+          <input matInput formControlName="city">
+        </mat-form-field>
+      </div>
+      <div class="container_3">
+        <mat-form-field appearance="fill">
+          <mat-label>Phone</mat-label>
+          <input matInput formControlName="phone">
+          <mat-error *ngIf="employeeForm.get('phone')?.hasError('pattern')">
+            Please enter a valid phone number.
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
+  <div class="button_space">
+    <button mat-flat-button color="primary" (click)="navToMainMenu()">Cancel</button>
+    <button mat-flat-button color="primary" type="submit" [disabled]="!employeeForm.valid" (click)="updateEmployee()">
+      Confirm
+    </button>
+  </div>
+</div>
