--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   flex-direction: row;
   column-gap: 100px;
-  width: 0%;
+  width: 0;
 }
 
 .container_1, .container_2, .container_3 {
@@ -28,6 +28,7 @@ body {
 
 
 .app-route {
+  align-content: center;
   background-color: #ffffff;
   width: 100%;
   height: 100%;
@@ -37,9 +38,13 @@ body {
 .form_layout {
   background-color: #ffffff;
   width: 960px;
-  height: 400px;
-  padding: 60px 90px 60px 60px;
+  height: 450px;
+  padding: 25px 90px 60px 60px;
   margin-left: 20%;
+}
+
+.form_layout h2{
+  margin-bottom: 40px;
 }
 
 .button_space{
