--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -22,7 +22,7 @@
   <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> No.</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
       <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
     </ng-container>
 
