--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ body {
   width: 960px;
   height: 450px;
   padding: 25px 90px 60px 60px;
-  margin-left: 215px;
+  margin-left: 11%;
 }
 
 .form_layout h2{
